# project-SGDNA

./: Cargo.toml  Makefile  NOTICE  README.md  config.json
.github/workflows/: hugo.yaml
PT_code_detector/: Cargo.toml
PT_code_detector/src/: main.rs
docs/: _index.md  about.md  paper.md  resources.md
docs/.obsidian/: workspace.json
docs/notes/: Rewriting DNA to make custom monstrosities.md
gb_parser/: Cargo.toml
gb_parser/src/: main.rs
sgdna_lib/: Cargo.toml
sgdna_lib/src/objects/: config.rs  gb_container.rs  mod.rs
site/: hugo.toml
site/public/: 404.html  index.html  index.xml  sitemap.xml
site/public/_index.md/: index.html
site/public/about/: index.html
site/public/categories/: index.html
site/public/content/: index.html  index.xml
site/public/content/welcome/: index.html
site/public/css/: coder.css.map
site/public/notes/: index.html  index.xml
site/public/notes/rewriting-dna-to-make-custom-monstrosities/: index.html
site/public/notes/test/: index.html
site/public/notes/untitled/: index.html
site/public/paper/: index.html
site/public/tags/: index.html
site/public/untitled/: index.html
site/public/welcome/: index.html
test_data/: TE Bistable Switch - pET9a.json  TE Repressilator v1 - pET9a.json  TE atf1 pET-9a.json  TE electricblue pet9a prok1.json
